Bug 350854 - Back/Forward Text is (again!) vertically misaligned in 'Icon and Text' mode. will get post-facto review on this.

--- a/mozilla/browser/themes/winstripe/browser/browser.css
+++ b/mozilla/browser/themes/winstripe/browser/browser.css
@@ -309,6 +309,7 @@ toolbar:not([mode="text"]) #forward-button .toolbarbutton-menubutton-button {
   -moz-binding: url('chrome://global/content/bindings/toolbarbutton.xml#toolbarbutton-image');
   margin-left: 0 !important;
   margin-right: 0 !important;
+  padding: 0;
   min-width: 0;
 }
 
